new funxiton: aggregate.size

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,9 @@ export(aggregate.comb)
 export(aggregate.field)
 export(aggregate.station)
 export(aggregate.area)
+export(aggregate.size)
+export(aggregate.size.matrix)
+export(aggregate.size.field)
 export(alt)
 export(annual)
 export(annual.default)
