Bug fixed in snow depth values for metnod

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -677,6 +677,7 @@ export(station.newlyn)
 export(sort.station)
 export(manual)
 export(ABC4ESD)
+export(elementkode)
 export(esd.tips)
 export(esd.issues)
 export(ensemblemean)
