--- a/NAMESPACE
+++ b/NAMESPACE
@@ -680,7 +680,7 @@ export(station.newlyn)
 export(sort.station)
 export(manual)
 export(ABC4ESD)
-export(elementkode)
+export(element.kode)
 export(esd.tips)
 export(esd.issues)
 export(ensemblemean)
