Fixed some S3 generic/method consistency ... WARNINGs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -227,14 +227,13 @@ export(DS.station.pca)
 export(DS.comb)
 export(DS.field)
 export(DS.eof)
-export(DS.t2m.month.field)
-export(DS.t2m.season.field)
-export(DS.precip.season.field)
-export(DS.freq)
-export(DS.spell)
+#export(DS.t2m.month.field)
+#export(DS.t2m.season.field)
+#export(DS.precip.season.field)
+#export(DS.freq)
+#export(DS.spell)
 export(DS.pca)
-export(DS.seasonalcycle)
-export(DS.seasonalcycle)
+#export(DS.seasonalcycle)
 export(DSensemble)
 #export(DSE)
 export(DSensemble.default)
