--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: esd
-Version: 1.8.13
-Date: Jan 10 2019
+Version: 1.8.14
+Date: Jan 11 2019
 Title: Climate analysis and empirical-statistical downscaling (ESD) package for
     monthly and daily data
 Author: Rasmus E. Benestad <rasmus.benestad@met.no>, Abdelkader Mezghani, and Kajsa M. Parding
@@ -27,3 +27,4 @@ Description: The package contains R functions for retrieving data, making
 License: GPL (>= 2)
 URL: http://rcg.gvc.gu.se/edu/esd.pdf
 ZipData: no
+RoxygenNote: 6.1.1
