added rainvar, rainvartrend and updated write2ncdf4.station to include the variance of daily precipitation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -288,6 +288,7 @@ export(map2sphere)
 export(map)
 export(map.default)
 export(map.matrix)
+export(map.data.frame)
 export(map.stationmeta)
 export(map.station)
 export(map.comb)
@@ -741,3 +742,5 @@ export(lastelementrecord)
 export(is.inside)
 export(test.is.inside)
 export(strstrip)
+export(rainvar)
+export(rainvartrend)
