added map.stationstats and revised retrieve.stationsummary to return stationstats class object. Also added the function bin for binning data in rtools.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -290,6 +290,7 @@ export(map.default)
 export(map.matrix)
 export(map.data.frame)
 export(map.stationmeta)
+export(map.stationstats)
 export(map.station)
 export(map.comb)
 export(map.eof)
@@ -744,3 +745,4 @@ export(test.is.inside)
 export(strstrip)
 export(rainvar)
 export(rainvartrend)
+export(bin)
