some further refinements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -290,7 +290,7 @@ export(map.default)
 export(map.matrix)
 export(map.data.frame)
 export(map.stationmeta)
-export(map.stationstats)
+export(map.stationsummary)
 export(map.station)
 export(map.comb)
 export(map.eof)
