--- a/NAMESPACE
+++ b/NAMESPACE
@@ -366,8 +366,7 @@ export(retrieve.station)
 export(retrieve.default)
 export(retrieve.stationsummary)
 export(rotM)
-export(scatter.hexbin)
-export(scatter.sunflower)
+export(scatter)
 export(select)
 export(select.default)
 export(select.station)
