minor updates, fixes related to retrieve

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
-import(ncdf4)
-import(zoo)
+#import(ncdf4)
+#import(zoo)
 
 ## Imports from other packages:
 importFrom("grDevices", "adjustcolor", "cm.colors", "col2rgb",
@@ -359,7 +359,6 @@ export(regrid.station)
 export(regrid.pca)
 export(regrid.irregweights)
 #export(replace.char)
-export(retrieve.ncdf)
 export(retrieve)
 export(retrieve.ncdf4)
 export(retrieve.station)
@@ -511,7 +510,6 @@ export(write2ncdf4.station)
 export(write2ncdf4.eof)
 export(write2ncdf4.pca)
 export(write2ncdf4.dsensemble)
-export(check.ncdf)
 
 export(FTscramble)
 export(WG)
@@ -740,3 +738,5 @@ export(strstrip)
 export(rainvar)
 export(rainvartrend)
 export(bin)
+#export(check.ncdf)
+#export(retrieve.ncdf)
