--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,7 +113,6 @@ export(as.monthly)
 export(as.monthly.default)
 export(as.monthly.station)
 export(as.monthly.field)
-#export(as.observed.station)
 export(as.original.data)
 export(as.original.data.ds)
 export(as.original.data.station)
@@ -399,6 +398,7 @@ export(station2field)
 export(stnr)
 export(sst.DNMI)
 export(sst.NCEP)
+export(subset)
 export(default.subset)
 export(subset.comb)
 export(subset.station)
@@ -426,7 +426,6 @@ export(t2m.NCEP)
 export(t2m.NorESM.M)
 export(test.ds.field)
 export(test.num.predictors)
-export(test.EOF)
 export(test.records)
 export(trend)
 export(trend.default)
@@ -437,10 +436,10 @@ export(trend.zoo)
 export(trend.zoo.multi)
 export(validate)
 export(validate.default)
-export(validate.eof)
-export(validate.eof.field)
+#export(validate.eof)
+#export(validate.eof.field)
 export(validate.eof.comb)
-export(validate.ds)
+#export(validate.ds)
 export(validate.dsensemble)
 #export(replacechars)
 #export(cmip35.global)
