updated roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ S3method(MVR,field)
 S3method(MVR,pca)
 S3method(PCA,default)
 S3method(PCA,station)
+S3method(PCA,trajectory)
 S3method(WG,FT.day.t2m)
 S3method(WG,fw.day.precip)
 S3method(WG,pca.day.t2m.precip)
@@ -163,8 +164,6 @@ S3method(corfield,zoo)
 S3method(crossval,ds)
 S3method(crossval,dsensemble)
 S3method(crossval,list)
-S3method(density,events)
-S3method(density,trajectory)
 S3method(diagnose,cca)
 S3method(diagnose,comb)
 S3method(diagnose,comb.eof)
@@ -181,7 +180,6 @@ S3method(exceedance,default)
 S3method(exceedance,field)
 S3method(exceedance,station)
 S3method(filt,default)
-S3method(frequency,data)
 S3method(g2dl,corfield)
 S3method(g2dl,default)
 S3method(g2dl,eof)
@@ -203,20 +201,17 @@ S3method(iid.test,station)
 S3method(image,plot)
 S3method(lag,field)
 S3method(lag,station)
-S3method(map,anomaly.trajectory)
 S3method(map,array)
 S3method(map,cca)
 S3method(map,comb)
 S3method(map,corfield)
 S3method(map,data.frame)
 S3method(map,default)
-S3method(map,density.trajectory)
 S3method(map,ds)
 S3method(map,dsensemble)
 S3method(map,eof)
 S3method(map,events)
 S3method(map,field)
-S3method(map,hexbin.trajectory)
 S3method(map,matrix)
 S3method(map,mvr)
 S3method(map,pca)
@@ -224,7 +219,6 @@ S3method(map,pca.trajectory)
 S3method(map,station)
 S3method(map,station.old)
 S3method(map,stationmeta)
-S3method(map,sunflower.trajectory)
 S3method(map,trend)
 S3method(matchdate,default)
 S3method(matchdate,list)
@@ -384,7 +378,6 @@ export(NE)
 export(NINO3.4)
 export(NSE)
 export(PCA)
-export(PCA.trajectory)
 export(QBO)
 export(RMSE)
 export(SOI)
@@ -452,6 +445,7 @@ export(crossval)
 export(cumugram)
 export(cv)
 export(dX)
+export(datafrequency)
 export(day)
 export(default.subset)
 export(density2count)
@@ -470,6 +464,7 @@ export(esd.issues)
 export(esd.tips)
 export(esd2ele)
 export(events)
+export(events2density)
 export(events2field)
 export(events2station)
 export(events2trajectory)
@@ -497,6 +492,7 @@ export(gridbox)
 export(gridmap)
 export(gridstation)
 export(heatwavespells)
+export(hexbin.trajectory)
 export(history.esd)
 export(history.stamp)
 export(histwet)
@@ -559,7 +555,6 @@ export(param2ele)
 export(pattern)
 export(pca2eof)
 export(pca2station)
-export(pca2trajectory)
 export(pcafill)
 export(pentad)
 export(plot)
@@ -614,6 +609,7 @@ export(stid)
 export(stnr)
 export(strstrip)
 export(subset)
+export(sunflower.trajectory)
 export(t2m.DNMI)
 export(t2m.NorESM.M)
 export(t2m.Pr)
@@ -628,6 +624,7 @@ export(track)
 export(trackfilter)
 export(trackstats)
 export(trajectory)
+export(trajectory2density)
 export(trajectory2events)
 export(trajectory2field)
 export(trajectory2station)
@@ -646,3 +643,30 @@ export(write2ncdf4)
 export(year)
 export(ylab)
 export(zeros)
+import(ncdf4)
+import(zoo)
+importFrom(grDevices,adjustcolor)
+importFrom(grDevices,cm.colors)
+importFrom(grDevices,col2rgb)
+importFrom(grDevices,dev.copy2eps)
+importFrom(grDevices,dev.copy2pdf)
+importFrom(grDevices,dev.list)
+importFrom(grDevices,dev.new)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,gray.colors)
+importFrom(grDevices,heat.colors)
+importFrom(grDevices,rainbow)
+importFrom(grDevices,rgb)
+importFrom(grDevices,terrain.colors)
+importFrom(grDevices,topo.colors)
+importFrom(graphics,barplot)
+importFrom(graphics,title)
+importFrom(stats,aggregate)
+importFrom(stats,lag)
+importFrom(utils,download.file)
+importFrom(utils,head)
+importFrom(utils,read.csv)
+importFrom(utils,read.csv2)
+importFrom(utils,read.fwf)
+importFrom(utils,read.table)
+importFrom(utils,write.table)
