udpated roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -265,7 +265,6 @@ S3method(regrid,irregweights)
 S3method(regrid,matrix)
 S3method(regrid,pca)
 S3method(regrid,station)
-S3method(regrid,weights)
 S3method(retrieve,default)
 S3method(retrieve,ncdf4)
 S3method(retrieve,rcm)
@@ -659,14 +658,52 @@ importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
 importFrom(grDevices,topo.colors)
+importFrom(graphics,axis)
 importFrom(graphics,barplot)
+importFrom(graphics,contour)
+importFrom(graphics,grid)
+importFrom(graphics,image)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
+importFrom(graphics,segments)
+importFrom(graphics,text)
 importFrom(graphics,title)
+importFrom(stats,acf)
 importFrom(stats,aggregate)
+importFrom(stats,approx)
+importFrom(stats,cor)
+importFrom(stats,cov)
+importFrom(stats,dgeom)
+importFrom(stats,dpois)
+importFrom(stats,end)
+importFrom(stats,ks.test)
 importFrom(stats,lag)
+importFrom(stats,lm)
+importFrom(stats,na.pass)
+importFrom(stats,pexp)
+importFrom(stats,pnorm)
+importFrom(stats,predict)
+importFrom(stats,qexp)
+importFrom(stats,qnorm)
+importFrom(stats,qqnorm)
+importFrom(stats,rexp)
+importFrom(stats,rgeom)
+importFrom(stats,rnorm)
+importFrom(stats,sd)
+importFrom(stats,start)
+importFrom(stats,var)
+importFrom(stats,window)
+importFrom(utils,data)
 importFrom(utils,download.file)
 importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
 importFrom(utils,read.fwf)
 importFrom(utils,read.table)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,str)
+importFrom(utils,txtProgressBar)
 importFrom(utils,write.table)
