--- a/NAMESPACE
+++ b/NAMESPACE
@@ -262,7 +262,6 @@ S3method(subset,dsensemble)
 S3method(subset,eof)
 S3method(subset,events)
 S3method(subset,field)
-S3method(subset,matrix)
 S3method(subset,pattern)
 S3method(subset,pca)
 S3method(subset,station)
@@ -593,6 +592,7 @@ export(stid)
 export(stnr)
 export(strstrip)
 export(subset)
+export(subset.matrix)
 export(subset.spell)
 export(subset.trend)
 export(summary.ncdf4)
