up to date with origin master

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -313,6 +313,7 @@ export(fnlon)
 export(fract.gt.x)
 export(frequency.abb)
 export(frequency.name)
+export(frostAPI)
 export(g2dl)
 export(g2dl.corfield)
 export(g2dl.default)
@@ -411,6 +412,7 @@ export(mask)
 export(matchdate)
 export(matchdate.default)
 export(matchdate.list)
+export(metafrostAPI)
 export(missval)
 export(month)
 export(n.records)
@@ -541,6 +543,7 @@ export(station.narp)
 export(station.newlyn)
 export(station.nordklim)
 export(station.sonel)
+export(station.thredds)
 export(station2field)
 export(stid)
 export(stnr)
@@ -572,6 +575,7 @@ export(t2m.NCEP)
 export(t2m.NorESM.M)
 export(t2m.Pr)
 export(t2m.vul)
+export(test.API)
 export(test.ds.field)
 export(test.is.inside)
 export(test.num.predictors)
@@ -727,6 +731,8 @@ importFrom(stats,start)
 importFrom(stats,var)
 importFrom(stats,wilcox.test)
 importFrom(stats,window)
+importFrom(utils,URLencode)
+importFrom(utils,View)
 importFrom(utils,combn)
 importFrom(utils,data)
 importFrom(utils,download.file)
