--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: esd
-Version: 1.9.02
-Date: Sep 09 2019
+Version: 1.9.03
+Date: Sep 12 2019
 Title: Climate analysis and empirical-statistical downscaling (ESD) package for
     monthly and daily data
 Author: Rasmus E. Benestad <rasmus.benestad@met.no>, Abdelkader Mezghani, and Kajsa M. Parding
@@ -18,7 +18,8 @@ Suggests:
     LatticeKrig,
     fields,
     PCICt,
-    jpeg
+    jpeg,
+    jsonlite
 Description: The package contains R functions for retrieving data, making
     climate analysis and downscaling of monthly mean and daily mean global
     climate scenarios.
