--- a/NAMESPACE
+++ b/NAMESPACE
@@ -412,6 +412,7 @@ export(mask)
 export(matchdate)
 export(matchdate.default)
 export(matchdate.list)
+export(meta.thredds)
 export(metafrostAPI)
 export(missval)
 export(month)
@@ -749,4 +750,3 @@ importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
 importFrom(utils,unzip)
 importFrom(utils,write.table)
-
