Added UTM<->LatLon conversion functions. Implemented conversion in metno.frost.R and checked that resulting utm coords for 18700 are in accordance with ulric.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom("utils", "combn", "data", "download.file", "head",
            "read.csv", "read.csv2", "read.fwf", "read.table",
            "sessionInfo", "setTxtProgressBar", "str", "tail",
            "txtProgressBar", "untar", "unzip", "write.table")
+importFrom("jsonlite", "data.table")
 
 # Exports - in alphabetic order
 export(arec)
@@ -282,6 +283,7 @@ export(gridmap)
 export(gridstation)
 export(lag.station)
 export(lag.field)
+export(LatLon2UTM)
 export(lonlatprojection)
 export(map2sphere)
 export(map)
@@ -392,6 +394,7 @@ export(station.ghcnd)
 export(station.ghcnm)
 export(station.metnom)
 export(station.metnod)
+export(station.metno.frost)
 export(station.nordklim)
 export(station.giss)
 export(station2field)
@@ -434,6 +437,7 @@ export(trend.eof)
 export(trend.field)
 export(trend.zoo)
 export(trend.zoo.multi)
+export(UTM2LatLon)
 export(validate)
 export(validate.default)
 #export(validate.eof)
