Added ERA5.CDS that pulls down netCDF files from Copernicus Climate Data Store (CDS)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,13 +36,14 @@ export(EOF)
 export(EOF.comb)
 export(EOF.default)
 export(EOF.field)
+export(ERA5.CDS)
 export(FTscramble)
 export(GDD)
 export(GSL)
 export(GSL.nasa)
-export(GSL.aviso)
 export(HDD)
 export(HadCRUT4)
+export(IOD)
 export(KGE)
 export(MVR)
 export(MVR.default)
