added 'radar()' which reads MET radar data from thredds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -483,6 +483,7 @@ export(qp.test)
 export(qp.test.station)
 export(qqgeom)
 export(qual)
+export(radar)
 export(rainequation)
 export(rainvar)
 export(rainvartrend)
