added function to access seNorge and MEPS data from thredds.met.no

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -414,6 +414,7 @@ export(mask)
 export(matchdate)
 export(matchdate.default)
 export(matchdate.list)
+export(meps.thredds)
 export(meta.thredds)
 export(metafrostAPI)
 export(missval)
@@ -519,6 +520,7 @@ export(season.default)
 export(season.trajectory)
 export(select)
 export(select.station)
+export(senorge)
 export(slp.DNMI)
 export(slp.NCEP)
 export(softattr)
