improvement: better defaults for vec and corrected arguments ERA5.CDS to fit the esd style

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -618,6 +618,7 @@ export(validate.eof.comb)
 export(validate.eof.field)
 export(validate.pca)
 export(varid)
+export(vec)
 export(vis)
 export(vis.cca)
 export(vis.default)
