updated frost functions + minor fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(HDD)
 export(HadCRUT4)
 export(IOD)
 export(KGE)
+export(LatLon2UTM)
 export(MVR)
 export(MVR.default)
 export(MVR.eof)
@@ -66,6 +67,7 @@ export(SOI)
 export(SSA)
 export(Sunspots)
 export(TGW)
+export(UTM2LatLon)
 export(WG)
 export(WG.FT.day.t2m)
 export(WG.fw.day.precip)
@@ -418,6 +420,9 @@ export(matchdate.list)
 export(meps.thredds)
 export(meta.thredds)
 export(metafrostAPI)
+export(metno.frost.meta.day)
+export(metno.frost.meta.month)
+export(metno.frost.station)
 export(missval)
 export(month)
 export(n.records)
@@ -543,6 +548,7 @@ export(station.ghcnd)
 export(station.ghcnm)
 export(station.giss)
 export(station.gloss)
+export(station.metno.frost)
 export(station.metnod)
 export(station.metnom)
 export(station.nacd)
