--- a/NAMESPACE
+++ b/NAMESPACE
@@ -382,6 +382,7 @@ export(is.years)
 export(kge)
 export(lag.field)
 export(lag.station)
+export(lastdry)
 export(lastelementrecord)
 export(lastrains)
 export(lastyear)
