retrieve.ESGF() reads CMIP6 data directly from ESGF via OpenDAP...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -504,6 +504,7 @@ export(regrid.matrix)
 export(regrid.pca)
 export(regrid.station)
 export(retrieve)
+export(retrieve.ESGF)
 export(retrieve.default)
 export(retrieve.ncdf4)
 export(retrieve.rcm)
