updated frost stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -417,7 +417,7 @@ export(mask)
 export(matchdate)
 export(matchdate.default)
 export(matchdate.list)
-export(meps.thredds)
+export(meps)
 export(meta.thredds)
 export(metafrostAPI)
 export(metno.frost.meta.day)
