--- a/NAMESPACE
+++ b/NAMESPACE
@@ -494,6 +494,7 @@ export(rbind.field)
 export(read.best.track)
 export(read.hurdat2)
 export(read.imilast)
+export(reafill)
 export(records)
 export(ref)
 export(regfit)
@@ -589,6 +590,7 @@ export(test.ds.field)
 export(test.is.inside)
 export(test.num.predictors)
 export(test.rainequation)
+export(test.reafill)
 export(test.records)
 export(track)
 export(track.default)
@@ -611,6 +613,7 @@ export(trend.station)
 export(trend.zoo)
 export(trend.zoo.multi)
 export(unit)
+export(update.ncdf4.station)
 export(validate)
 export(validate.cca)
 export(validate.default)
