reafill() - reanalysis for filling gaps in station records; update.ncdf4.station()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -596,6 +596,7 @@ export(test.num.predictors)
 export(test.rainequation)
 export(test.reafill)
 export(test.records)
+export(test.update.ncdf4.station)
 export(track)
 export(track.default)
 export(track.events)
