adding meta.ESGF()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -419,6 +419,7 @@ export(matchdate)
 export(matchdate.default)
 export(matchdate.list)
 export(meps)
+export(meta.ESGF)
 export(meta.thredds)
 export(metafrostAPI)
 export(metno.frost.meta.day)
