updated station.metnod and related stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -284,6 +284,7 @@ export(diagnose.station)
 export(diagram)
 export(diagram.dsensemble)
 export(diagram.station)
+export(difftime.month)
 export(distAB)
 export(downscaling.about)
 export(ele)
@@ -528,7 +529,6 @@ export(season)
 export(season.abb)
 export(season.default)
 export(season.trajectory)
-export(select)
 export(select.station)
 export(senorge)
 export(slp.DNMI)
