--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Package: esd
 Date: June 25 2020
 Title: Climate analysis and empirical-statistical downscaling (ESD) package for
     monthly and daily data
-Author: Rasmus E. Benestad <rasmus.benestad@met.no>, Abdelkader Mezghani, Kajsa M. Parding, Helene B. Erlandsen, and Ketil Tunheim
+Author: Rasmus E. Benestad <rasmus.benestad@met.no>, Abdelkader Mezghani, Kajsa M. Parding, Helene B. Erlandsen, Ketil Tunheim, and Cristian Lussana
 Maintainer: Rasmus E. Benestad <rasmus.benestad@met.no>
 Depends:
     R (>= 2.10.0),
