--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,8 @@
 Package: esd
-    Version: 1.9.41
+Version: 1.9.41
 Date: June 25 2020
-Title: Climate analysis and empirical-statistical downscaling (ESD) package for
-    monthly and daily data
-Author: Rasmus E. Benestad <rasmus.benestad@met.no>, Abdelkader Mezghani, Kajsa M. Parding, Helene B. Erlandsen, Ketil Tunheim, and Cristian Lussana
+Title: Climate analysis and empirical-statistical downscaling (ESD) package for monthly and daily data
+Author: Rasmus E. Benestad, Abdelkader Mezghani, Kajsa M. Parding, Helene B. Erlandsen, Ketil Tunheim, and Cristian Lussana    
 Maintainer: Rasmus E. Benestad <rasmus.benestad@met.no>
 Depends:
     R (>= 2.10.0),
@@ -20,9 +19,7 @@ Suggests:
     PCICt,
     jpeg,
     jsonlite
-Description: The package contains R functions for retrieving data, making
-    climate analysis and downscaling of monthly mean and daily mean global
-    climate scenarios.
+Description: The package contains R functions for retrieving data, making climate analysis and downscaling of monthly mean and daily mean global climate scenarios.
 License: GPL (>= 2)
 URL: http://github.com/metno/esd
 Encoding: UTF-8
