--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,10 @@ export(as.calibrationdata.station)
 export(as.climatology)
 export(as.comb)
 export(as.comb.eof)
+export(as.daily)
+export(as.daily.default)
+export(as.daily.field)
+export(as.daily.station)
 export(as.decimal)
 export(as.eof)
 export(as.eof.appendix)
