changed internal function default.subset to subset.default to be more in line with naming convensions of esd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -273,7 +273,6 @@ export(cv)
 export(dX)
 export(datafrequency)
 export(day)
-export(default.subset)
 export(density2count)
 export(diagnose)
 export(diagnose.cca)
@@ -571,6 +570,7 @@ export(subset)
 export(subset.cca)
 export(subset.comb)
 export(subset.corfield)
+export(subset.default)
 export(subset.ds)
 export(subset.dsensemble)
 export(subset.eof)
