bug fixes in as.residual.ds and retrieve. Added IDF, day2IDF and plot.IDF

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(GSL)
 export(GSL.nasa)
 export(HDD)
 export(HadCRUT4)
+export(IDF)
 export(IOD)
 export(KGE)
 export(LatLon2UTM)
@@ -273,6 +274,7 @@ export(cv)
 export(dX)
 export(datafrequency)
 export(day)
+export(day2IDF)
 export(density2count)
 export(diagnose)
 export(diagnose.cca)
@@ -449,6 +451,7 @@ export(pcafill)
 export(pcafill.test)
 export(pentad)
 export(plot)
+export(plot.IDF)
 export(plot.cca)
 export(plot.cyclonebudget)
 export(plot.diagnose)
