--- a/NAMESPACE
+++ b/NAMESPACE
@@ -428,6 +428,7 @@ export(meps)
 export(meta.ESGF)
 export(meta.thredds)
 export(metno.frost.meta.day)
+export(metno.frost.meta.minute)
 export(metno.frost.meta.month)
 export(metno.frost.station)
 export(missval)
