--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
-  - title: "Utililities"
-    url: /_pages/utilities/
+  - title: "Utilities"
+    url: /utilities/
   - title: "Retrieve"
-    url: /_pages/retrieve/
+    url: /retrieve/
