--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-remote_theme: pmarsceill/just-the-docs
+# remote_theme: pmarsceill/just-the-docs
+remote_theme: "mmistakes/minimal-mistakes@4.21.0"
 
 
 search_enabled: true
@@ -14,10 +15,10 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
-## mimic GitHub Pages with --safe
-#whitelist:
-#  - jekyll-paginate
-#  - jekyll-sitemap
-#  - jekyll-gist
-#  - jekyll-feed
-#  - jekyll-include-cache
+# mimic GitHub Pages with --safe
+whitelist:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
