--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,7 +31,7 @@ pages:
       - title: "Formulas and Functions"
         url: /process/#formulas--functions
       - title: "Re-gridding"
-        url: /process/#regridding
+        url: /process/#re-gridding
       - title: "Subsetting"
         url: /process/#subsetting
       - title: "Combining and Synchronising"
