--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,8 @@ main:
     url: /evaluate/
   - title: "Trouble Shooting"
     url: /trouble/
+  - title: "Examples"
+    url: /examples/
 
 pages:
   - title: "Utilities"
