--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
-# remote_theme: pmarsceill/just-the-docs
-remote_theme: "mmistakes/minimal-mistakes@4.19.0"
-
 title       : "ESD R TOOLBOX"
 subtitle    : "by MET Norway" 
 description : "ESD R Tool for visualising and downscaling climate data"
 
 logo        : "/assets/images/Met_RGB_Horisontal_ENG.jpeg"
+
+# Build settings
+markdown: kramdown
+# remote_theme: pmarsceill/just-the-docs
+remote_theme: "mmistakes/minimal-mistakes@4.19.0"
 
 defaults:
   # _pages
