more S3-methnod fixes for R >= 4.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,40 @@ S3method(esd::as.monthly,field)
 S3method(esd::as.monthly,station)
 S3method(esd::as.pca,ds)
 S3method(esd::as.pca,station)
+S3method(esd::map,array)
+S3method(esd::map,cca)
+S3method(esd::map,comb)
+S3method(esd::map,corfield)
+S3method(esd::map,data.frame)
+S3method(esd::map,default)
+S3method(esd::map,ds)
+S3method(esd::map,eof)
+S3method(esd::map,events)
+S3method(esd::map,field)
+S3method(esd::map,matrix)
+S3method(esd::map,mvr)
+S3method(esd::map,pca)
+S3method(esd::map,trend)
+S3method(esd::plot,cca)
+S3method(esd::plot,ds)
+S3method(esd::plot,dsensemble)
+S3method(esd::plot,dsensemble.multi)
+S3method(esd::plot,dsensemble.pca)
+S3method(esd::plot,eof)
+S3method(esd::plot,field)
+S3method(esd::plot,list)
+S3method(esd::plot,mvr)
+S3method(esd::plot,nevents)
+S3method(esd::plot,pca)
+S3method(esd::plot,spell)
+S3method(esd::plot,ssa)
+S3method(esd::plot,station)
+S3method(esd::plot,trajectory)
+S3method(esd::plot,xval)
+S3method(esd::regrid,eof)
+S3method(esd::regrid,field)
+S3method(esd::regrid,matrix)
+S3method(esd::season,default)
 S3method(esd::subset,cca)
 S3method(esd::subset,comb)
 S3method(esd::subset,corfield)
@@ -430,25 +464,12 @@ export(lon)
 export(lonlatprojection)
 export(manual)
 export(map)
-export(map.array)
-export(map.cca)
-export(map.comb)
-export(map.corfield)
 export(map.data.frame)
-export(map.default)
-export(map.ds)
 export(map.dsensemble)
-export(map.eof)
-export(map.events)
-export(map.field)
-export(map.matrix)
-export(map.mvr)
-export(map.pca)
 export(map.pca.trajectory)
 export(map.station)
 export(map.stationmeta)
 export(map.trajectory)
-export(map.trend)
 export(map2sphere)
 export(mask)
 export(matchdate)
@@ -482,29 +503,13 @@ export(pcafill.test)
 export(pentad)
 export(plot)
 export(plot.IDF)
-export(plot.cca)
 export(plot.cyclonebudget)
 export(plot.diagnose)
 export(plot.diagnose.comb.eof)
 export(plot.diagnose.dsensemble)
 export(plot.diagnose.matrix)
-export(plot.ds)
-export(plot.dsensemble)
-export(plot.dsensemble.multi)
 export(plot.dsensemble.one)
-export(plot.dsensemble.pca)
-export(plot.eof)
-export(plot.field)
-export(plot.list)
-export(plot.mvr)
-export(plot.nevents)
-export(plot.pca)
 export(plot.pca.trajectory)
-export(plot.spell)
-export(plot.ssa)
-export(plot.station)
-export(plot.trajectory)
-export(plot.xval)
 export(polyfit.trajectory)
 export(precip.ERAINT)
 export(precip.Pr)
@@ -541,9 +546,6 @@ export(records)
 export(ref)
 export(regfit)
 export(regrid)
-export(regrid.eof)
-export(regrid.field)
-export(regrid.matrix)
 export(regrid.pca)
 export(regrid.station)
 export(retrieve)
@@ -562,7 +564,6 @@ export(seasevol)
 export(seasevol.station)
 export(season)
 export(season.abb)
-export(season.default)
 export(season.trajectory)
 export(select.station)
 export(senorge)
